@@ -1,5 +1,8 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-node-v1.0.1
+- FIX: Fix issue where partials containing styleModifiers with integers were not found correctly under all circumstances
+
 PL-node-v1.0.0
 - FIX: Resolve issue with not hiding underscored patterns.
 - THX: Thanks @ivancamilov for reporting this regression.
